# Setuptools configuration file for the "kinney" Python package.
[metadata]
name = kinney

[options]
# All local imports must use the "kinney." prefix.  This provides for better
# control of import resolution and prevents name collision, but in order to
# better cooperate with other languages in the same repository, there is no
# "kinney" directory.  Instead, this behavior is simulated by the `package_dir`
# directive indicating that the source directory for the "kinney" package is the
# repository root (`package_dir={'kinney': ''}` in `setup.py`).
#
# Note, however, that this setup is *not* supported by "development mode" ([1]),
# so that functionality is implemented by a "*.pth" file installed by
# `util/install_pth.py`.
#
# [1]: https://setuptools.readthedocs.io/en/latest/setuptools.html#development-mode
package_dir = kinney=
packages =
    kinney
    kinney.controller
    kinney.controller.ev
    kinney.controller.ev.chargepoint
    kinney.controller.ev.chargepoint.classes
    kinney.controller.ev.chargepoint.test
    kinney.orchestrator
