# Setuptools configuration file for the "kinney" Python package.
[metadata]
name = kinney

[options]
# All local imports must use the "kinney." prefix.  This provides for better
# control of import resolution and prevents name collision, but in order to
# better cooperate with other languages in the same repository, there is no
# "kinney" directory.  Instead, this behavior is simulated by the `package_dir`
# directive indicating that the source directory for the "kinney" package is the
# repository root (`package_dir={'kinney': ''}` in `setup.py`).
#
# Note, however, that this setup is *not* supported by "development mode" ([1]),
# so that functionality is implemented by a "*.pth" file installed by
# `util/install_pth.py`.
#
# [1]: https://setuptools.readthedocs.io/en/latest/setuptools.html#development-mode
package_dir = kinney=
packages =
    kinney
    kinney.controller
    kinney.controller.chargepoint
    kinney.controller.chargepoint.py
    kinney.controller.chargepoint.py.classes
    kinney.controller.chargepoint.py.test
    kinney.orchestrator

# YAPF configuration for Python formatting.
# https://github.com/google/yapf/blob/master/README.rst#formatting-style
[yapf]
based_on_style = google
